# workout-website

./: .env  1.py  10.py  11.py  114.py  12.py  13.py  14.py  15.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  a5gui.py  agent.py  agent1.py  agent2.py  agent3.py  agent4.py  agent5.py  agent5gui  agent6.py  aisw.py  app.py  app1.py  app2.py  app3.py  app4.py  apph.py  appm.py  apps.py  customer.py  decs.py  genai.py  hai.py  haiapik.py  (+7 more)
genai/: README.md  pyproject.toml
genai/src/genai/: crew.py  main.py  task.py
