[project]
name = "genai"
version = "0.1.0"
description = "genai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
genai = "genai.main:run"
run_crew = "genai.main:run"
train = "genai.main:train"
replay = "genai.main:replay"
test = "genai.main:test"
run_with_trigger = "genai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
